--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Version	Datum     	Bemerkung
 3.1.0	21.12.2021	Feature: added panel 'Mail Footer' on the configuration page
 					Feature: Display tax in footer
 					Bug: Notice on installation missing array index cms entity meta_title id_lang
+3.1.1	21.02.2022	Fix: hook display footer after
 
 
 
