--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ Version	Datum     	Bemerkung
 3.1.1	21.02.2022	Fix: hook display footer after
 3.1.2	14.03.2022	Fix: additional html in mail-templates
 					Update: display additional HTML in mails. Fix: display UTF-8 chars
-
-
-
+3.1.3	04.05.2022	new translation system
+					fix: classic email template dom element
+					fix: classic mail template footer
+					
