--- a/changelog.txt
+++ b/changelog.txt
@@ -12,4 +12,5 @@ Version	Datum     	Bemerkung
 3.1.3	04.05.2022	new translation system
 					fix: classic email template dom element
 					fix: classic mail template footer
+3.1.4	21.05.2022	fix: translation test 2
 					
