--- a/changelog.txt
+++ b/changelog.txt
@@ -13,4 +13,5 @@ Version	Datum     	Bemerkung
 					fix: classic email template dom element
 					fix: classic mail template footer
 3.1.4	21.05.2022	fix: translation test 2
+3.1.5	25.05.2022	fix: add modal container in footer template
 					
