--- a/translations/de-DE/ModulesLegalcomplianceAdmin.de-DE.xlf
+++ b/translations/de-DE/ModulesLegalcomplianceAdmin.de-DE.xlf
@@ -335,7 +335,7 @@
       <trans-unit id="56a98e3806ba49b60a534872eb19d01a">
         <source>The Legal Compliance module provides the means to indicate legally required informations to your customer, using static pages (some created on purpose by the module). It is your responsibility to fill in the corresponding pages with the required content.</source>
         <target>Das Modul Rechtssicherheit ermöglicht es Ihnen, ihren Shop rechtskonform abzusichern, indem Sie hier die entsprechenden Information in Form von zusätzlichen Seiten Ihrem Shop hinzufügen (einige davon direkt von diesem Modul erstellt).
-Es liegt aber allein in der Verantwortung des Shopbetreibers, diese Seiten mit dem erforderlichen rechtskonformenInhalt zu füllen. Unterstützung bei der Formulierung erhalten Sie von unseren Partnern, beispielsweise den Firmen Protected Shop oder Trusted Shops.</target>
+Es liegt aber allein in der Verantwortung des Shopbetreibers, diese Seiten mit dem erforderlichen rechtskonformen Inhalt zu füllen. Unterstützung bei der Formulierung erhalten Sie beispielsweise von den Firmen IT-Recht Kanzlei München, Händlerbund, Protected Shops oder Trusted Shops.</target>
         <note>Line: </note>
       </trans-unit>
       <trans-unit id="e087a70de5566015c0b9d3f54318a606">
