--- a/translations/de-DE/ModulesLegalcomplianceShop.de-DE.xlf
+++ b/translations/de-DE/ModulesLegalcomplianceShop.de-DE.xlf
@@ -39,12 +39,12 @@
       </trans-unit>
       <trans-unit id="5da618e8e4b89c66fe86e32cdafde142">
         <source>From</source>
-        <target>Von</target>
+        <target>Ab</target>
         <note>Line: </note>
       </trans-unit>
       <trans-unit id="16b24a264ab76a36917095bf6e41ef62">
         <source>Our previous price</source>
-        <target>Unser bisheriger Preis</target>
+        <target>Vorher</target>
         <note>Line: </note>
       </trans-unit>
       <trans-unit id="89bea8045e50a337d8ce9849a4e1633c">
