--- a/translations/de-DE/ModulesLegalcomplianceShop.de-DE.xlf
+++ b/translations/de-DE/ModulesLegalcomplianceShop.de-DE.xlf
@@ -2,29 +2,14 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file original="admin-dev" source-language="de-DE" target-language="de-DE" datatype="plaintext">
     <body>
+      <trans-unit id="a82be0f551b8708bc08eb33cd9ded0cf">
+        <source>Information</source>
+        <target>Informationen</target>
+        <note>Line: </note>
+      </trans-unit>
       <trans-unit id="7c5b051f9cd69598866d9abe424ace5b">
         <source>The order will only be confirmed when you click on the button 'Order with an obligation to pay' at the end of the checkout!</source>
         <target>Ihre Bestellung muss durch Mausklick auf den Button "Kaufen" bestätigt werden!</target>
-        <note>Line: </note>
-      </trans-unit>
-      <trans-unit id="272c87c1b60ba25f293fab358ba94a39">
-        <source>You must agree to our Terms of Service before going any further!</source>
-        <target>Um fortzufahren, müssen Sie unseren Allgemeinen Geschäftsbedingungen zustimmen!</target>
-        <note>Line: </note>
-      </trans-unit>
-      <trans-unit id="2223d375913a9a3b4619a1ada82f8de7">
-        <source>Something went wrong. If the problem persists, please contact us.</source>
-        <target>Etwas ist schief gelaufen. Sollte dieses Problem bestehen bleiben, nehmen Sie bitte Kontakt mit uns auf.</target>
-        <note>Line: </note>
-      </trans-unit>
-      <trans-unit id="7219074549f88adb580bf5a6fe57c459">
-        <source>Select a payment option first.</source>
-        <target>Wählen Sie zuerst eine Zahlungsart</target>
-        <note>Line: </note>
-      </trans-unit>
-      <trans-unit id="8b70c72bfa7600032a1cbd6a554d8828">
-        <source>Please check the "Revocation of virtual products" box first!</source>
-        <target>Bitte erst die Widerrufsbedingungen von virtuellen Artikeln bestätigen!</target>
         <note>Line: </note>
       </trans-unit>
       <trans-unit id="cd18220ba24e07df2d859c30cb5809a9">
@@ -52,14 +37,9 @@
         <target>zzgl. Versand</target>
         <note>Line: </note>
       </trans-unit>
-      <trans-unit id="6af90b162bd8ab1c547c76492d8a2380">
-        <source>(Under conditions)</source>
-        <target>(Unter bestimmten Bedingungen)</target>
-        <note>Line: </note>
-      </trans-unit>
-      <trans-unit id="59a297091dace235b4bce5af7b86ead6">
-        <source>My shopping cart</source>
-        <target>Mein Warenkorb</target>
+      <trans-unit id="a9fb186400bb35ec7c0aa89ba8e024ce">
+        <source>Download Info</source>
+        <target>Download Info</target>
         <note>Line: </note>
       </trans-unit>
       <trans-unit id="ded564687a6602917eb07c460577f456">
@@ -70,16 +50,6 @@
       <trans-unit id="29bd9770285cd28ad9e55714db33e8bd">
         <source>The European Commission gives consumers the opportunity to resolve online disputes pursuant to Art. 14 Para. 1 of the ODR on one of their platforms. The platform ([1]http://ec.europa.eu/consumers/odr[/1]) serves as a site where consumers can try to reach out-of-court settlements of disputes arising from online purchases and contracts for services.</source>
         <target>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit, die Sie hier finden: ([1]https://ec.europa.eu/consumers/odr[/1]. Verbraucher haben die Möglichkeit, diese Plattform für die Beilegung von Streitigkeiten über online getätigte Käufe oder abgeschlossene Dienstleistungsverträge zu nutzen.</target>
-        <note>Line: </note>
-      </trans-unit>
-      <trans-unit id="427e29628d9f5d9bfde0e58b32569619">
-        <source>Print this page</source>
-        <target>Seite drucken</target>
-        <note>Line: </note>
-      </trans-unit>
-      <trans-unit id="a82be0f551b8708bc08eb33cd9ded0cf">
-        <source>Information</source>
-        <target>Informationen</target>
         <note>Line: </note>
       </trans-unit>
       <trans-unit id="5fb4f05f62f9967052977077d783fc2d">
@@ -105,6 +75,21 @@
       <trans-unit id="53ae8b43aace8a1d1349d659c150d99f">
         <source>shipping excluded</source>
         <target>zzgl. Versand</target>
+        <note>Line: </note>
+      </trans-unit>
+      <trans-unit id="59a297091dace235b4bce5af7b86ead6">
+        <source>My shopping cart</source>
+        <target>Mein Warenkorb</target>
+        <note>Line: </note>
+      </trans-unit>
+      <trans-unit id="427e29628d9f5d9bfde0e58b32569619">
+        <source>Print this page</source>
+        <target>Seite drucken</target>
+        <note>Line: </note>
+      </trans-unit>
+      <trans-unit id="6af90b162bd8ab1c547c76492d8a2380">
+        <source>(Under conditions)</source>
+        <target>(Unter bestimmten Bedingungen)</target>
         <note>Line: </note>
       </trans-unit>
     </body>
