--- a/changelog.txt
+++ b/changelog.txt
@@ -51,4 +51,7 @@ Version	Datum     	Bemerkung
 8.3.2	01.01.2024	Fix: errors in demo shop FO
 					fix: hook name display header
 8.3.3	05.01.2024	Fix: displayPaymentEU Hook on Upgrade / Delete upgrade-1.5.1.php
+8.3.4	12.02.2024	cache hook displayProductPriceBlock with smarty for performance
+					clean code part 1 & 2
+					fix: admin form missing brakets
 					
