--- a/changelog.txt
+++ b/changelog.txt
@@ -57,4 +57,5 @@ Version	Datum     	Bemerkung
 8.3.5	12.04.2024	Fix: move checkout modal box to hook_before_body_closing_tag
 					Fix: set table layout fixed in cms-part in emails
 8.3.6	29.04.2024	fix: cache key by product id on display price block hook
+8.3.7	03.05.2024	fix: caching price block template and smarty assign
 					
