--- a/changelog.txt
+++ b/changelog.txt
@@ -60,4 +60,5 @@ Version	Datum     	Bemerkung
 8.3.7	03.05.2024	fix: caching price block template and smarty assign
 8.3.8	27.05.2024	fix: fatal error
 					fix: missing var $type
+8.3.9	16.07.2024	fix: display tax info in footer switch
 					
