--- a/changelog.txt
+++ b/changelog.txt
@@ -68,4 +68,5 @@ Version	Datum     	Bemerkung
 					fix: escape "&" in email template
 					add edit button for cart table
 					alignment with conditions-checkbox off and lightbox issues
+8.4.3	04.10.2024	fix: edit button for cart table
 					
